# TONGUE-Renderer

./: .gitignore  CMakeLists.txt  DirectX12_Migration.md  README.md
include/: Renderer.h  d3dx12.h
include/Renderer/: Color.h  MasterRenderer.h  MathTypes.h  Mesh.h  MeshLoader.h  RenderSubmission.h  Shader.h  Texture.h  Window.h
src/: Main.cpp  MasterRenderer.cpp  Mesh.cpp  MeshLoader.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TriangleDemo.cpp  Window.cpp
tests/: CMakeLists.txt  Testing_Instructions.md  TriangleStressTest.cpp
